--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,11 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spring_security?useSSL=false&u
 spring.datasource.username=springs
 spring.datasource.password=1234
 
+
 # db ??
 # create? ??? Db? ???? ?? ??
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+spring.jwt.secret.key=kjbhi2j35rt43bgj92r382vfy#@gahfgwegoppjnvbv0987ybhr3faefe@#$WERFjadfiugwery23uirfqeuroi'wqeROqwerhbf/asdfbasfafagfwqerjh2n34@#$%^)()(*&^%FWDEWQ%#@$RHJYKU^234wefr.qwr
